--- a/SwiftDemo/Base.lproj/Main.storyboard
+++ b/SwiftDemo/Base.lproj/Main.storyboard
@@ -32,6 +32,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="gMe-mT-ByB">
+                                <rect key="frame" x="67" y="209" width="253" height="351"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -45,4 +49,7 @@
             <point key="canvasLocation" x="-234.40000000000001" y="31.934032983508249"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="img.JPG" width="2688" height="4032"/>
+    </resources>
 </document>
